css: ensure tables are not too big
But not too small either. Hence, min/max-width.

--- a/content/media/css/luffy.article.less
+++ b/content/media/css/luffy.article.less
@@ -49,7 +49,10 @@ main {
 #lf-text > .lf-table {
     width: 92%;
     table {
-        width: 100%;
+        max-width: 100%;
+        min-width: 55%;
+        margin-left: auto;
+        margin-right: auto;
     }
     margin-left: auto;
     margin-right: auto;
